test/good/euler/problem001.px

s = 0
for i in 1...1000 do
    if 3|i or 5|i do
        s += i
print s
