test/bad/loops/for2.px

for i in 0..3 do
    i = true
